update users site package.json to depend on gatsby and the theme

--- a/user-site/package.json
+++ b/user-site/package.json
@@ -3,5 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "christopherbiscardi <chris@christopherbiscardi.com> (@chrisbiscardi)",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "develop": "gatsby develop"
+  },
+  "dependencies": {
+    "gatsby": "*",
+    "gatsby-theme-minimal-blog": "*"
+  }
 }
