--- a/minimal-blog/package.json
+++ b/minimal-blog/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-filesystem": "^2.0.7",
     "gatsby-transformer-remark": "^2.1.11",
     "lodash": "^4.17.11",
+    "mkdirp": "^0.5.1",
     "polished": "^2.3.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
